2009-08-10  Christopher Faylor  <me+cygwin@cgf.cx>

	* fhandler_console.cc (create_invisible_console_workaround): Fix size
	of cmd in the way originally intended.

2009-08-10  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_console.cc (create_invisible_console_workaround):  Fix
	size of cmd to take spaces into account.

2009-08-08  Corinna Vinschen  <corinna@vinschen.de>

	* dtable.cc (dtable::init_std_file_from_handle): Fix comment to
	document change in the Windows 7 workaround.
	* wincap.cc (wincapc::init): Don't set has_console_handle_problem
	to false on 32 bit systems.

2009-08-06  Corinna Vinschen  <corinna@vinschen.de>

	* net.cc (cygwin_getnameinfo): Force setting NI_NUMERICSERV only
	on Windows 2003 and earlier, only if the port number doesn't
	resolve to a well-known service.  Change comment accordingly.

2009-08-05  Christopher Faylor  <me+cygwin@cgf.cx>

	* cygheap.h (cygheap_debug::endh): Delete.
	* debug.cc (lock_debug::acquired): Delete.
	(lock_debug::lock_debug): Simplify.
	(lock_debug::unlock): Ditto.
	(find_handle): Don't set endh here.
	(add_handle): Add new handle to beginning of the list rather than
	trying to maintain an end list pointer.
	(delete_handle): Minor optimization.
	(mark_closed): Make logic clearer.
	(verify_handle): Lock handle list before scanning.
	(setclexec): Ditto.
	(modify_handle): Ditto.
	(newh): Don't lock handle list here.  Assume caller did this.
	(mark_closed): Ditto.
	(close_handle): Remove unneeded #if.
	* dtable.cc (dtable::dup2): Tweak debug output.

2009-08-04  Christopher Faylor  <me+cygwin@cgf.cx>

	* path.cc (patch_conv::check): Zero path before setting it.

2009-08-04  Christopher Faylor  <me+cygwin@cgf.cx>

	* fhandler_socket.cc (fhandler_socket::send_internal): Just use wmem
	size if the length exceeds it.
	* net.cc (fdsock): Use 65535 as window size, just like the comment
	says or we run into problems with DuplicateHandle.

	* path.cc (patch_conv::check): Use set_path to set invalid filename.